--- a/about-me.html
+++ b/about-me.html
@@ -79,17 +79,16 @@
               </h2>
               <div class="paragraph py-4 w-75">
                 <p class="para">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit doloribus sit sed, iusto sunt eligendi odit
-                  accusamus accusantium tempora modi.
+                  I have 9 years of experience, including as a Sortation Center Warehouse Associate, as a Trainee and as a Package Handler in industries including Apparel and Accessory Stores, Engineering, Accounting, Research, Management, and Related Services and Motor Freight Transportation and Warehousing. Most recently, I have been working as a Sortation Center Warehouse Associate at Amazon from August 2022, and as a Trainee at Cognixia from June 2022. My skills and experiences include: Apache Webserver, Cashier, Computer Hardware, Data Mining, Database Administration, Desktop Pc, Eclipse, Electronics, Java, Javascript, Linux, Matlab, Mysql, Operating Systems, Oracle, Payroll Processing, Postgresql, Python, Raid, Servers, Software Development, Soldering, Sql, Tax Planning, Technical Support, Unix. I hold a Bachelor of Science degree in Computer Science from Georgia State University.
                 </p>
-                <p class="para">Why do we use it? It is a long established fact that a reader will be distracted by the
+                <!-- <p class="para">Why do we use it? It is a long established fact that a reader will be distracted by the
                   readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
                   more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it
                   look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as
                   their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their
                   infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose
                   (injected humour and the like).
-                </p>
+                </p> -->
               </div>
               <button type="button" class="btn button primary-button">Download my résumé</button>
             </div>
@@ -97,7 +96,7 @@
         </div>
       </section>
     </main>
-    
+
     <footer class="footer-area">
       <div class="container">
         <div class="">
