added certifications page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link disabled">Education</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link disabled">Certifications</a>
+                        <a class="nav-link" href="certifications.html">Certifications</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link disabled">Skills</a>
@@ -106,7 +106,7 @@
               </h2>
               <div class="paragraph py-4 w-75">
                 <p class="para">
-                  I have 9 years of experience, including as a Sortation Center Warehouse Associate, as a Trainee and as a Package Handler in industries including Apparel and Accessory Stores, Engineering, Accounting, Research, Management, and Related Services and Motor Freight Transportation and Warehousing. Most recently, I have been working as a Sortation Center Warehouse Associate at Amazon from August 2022, and as a Trainee at Cognixia from June 2022. My skills and experiences include: Apache Webserver, Cashier, Computer Hardware, Data Mining, Database Administration, Desktop Pc, Eclipse, Electronics, Java, Javascript, Linux, Matlab, Mysql, Operating Systems, Oracle, Payroll Processing, Postgresql, Python, Raid, Servers, Software Development, Soldering, Sql, Tax Planning, Technical Support, Unix. I hold a Bachelor of Science degree in Computer Science from Georgia State University.
+                  I have 9 years of experience, including as a Sortation Center Warehouse Associate, as a Trainee and as a Package Handler in industries including Apparel and Accessory Stores, Engineering, Accounting, Research, Management, and Related Services and Motor Freight Transportation and Warehousing. Most recently, I have been working as a Sortation Center Warehouse Associate at Amazon from August 2022, and also as a Trainee at Cognixia from June 2022. My skills and experiences include: Apache Webserver, Cashier, Computer Hardware, Data Mining, Database Administration, Desktop Pc, Eclipse, Electronics, Java, Javascript, Linux, Matlab, Mysql, Operating Systems, Oracle, Payroll Processing, Postgresql, Python, Raid, Servers, Software Development, Soldering, Sql, Tax Planning, Technical Support, Unix. I hold a Bachelor of Science degree in Computer Science from Georgia State University.
                 </p>
                 <!-- <p class="para">Why do we use it? It is a long established fact that a reader will be distracted by the
                   readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
