edited the footer

--- a/index.html
+++ b/index.html
@@ -512,19 +512,22 @@
       <div class="container">
         <div class="">
           <div class="site-logo text-center py-4">
-            <a href="#"><img src="./img/logo.png" alt="logo"></a>
+            <!-- <a href="#"><img src="./img/logo.png" alt="logo"></a> -->
           </div>
           <div class="social text-center">
             <h5 class="text-uppercase">Follow me</h5>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
+            <!-- <a href="#"><i class="fab fa-instagram"></i></a> -->
+            <!-- <a href="#"><i class="fab fa-youtube"></i></a> -->
+            <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
+            <a href="https://github.com/tojumikie"><i class="fab fa-github"></i></a>
+            <a href="https://stackoverflow.com/users/19149158/tojumikie"><i class="fab fa-stack-overflow"></i></a>
+            <a href="https://www.linkedin.com/in/toju-mikie-87ba96101/"><i class="fab fa-linkedin"></i></a>
           </div>
           <div class="copyrights text-center">
             <p class="para">
               Website 2022, created by Toju Mikie.
-              <a href="#"><span style="color: var(--primary-color);">Daily Tuition</span></a>
+              <!-- <a href="#"><span style="color: var(--primary-color);">Daily Tuition</span></a> -->
             </p>
           </div>
         </div>
