got dropdown menu working
dropdown menu in navbar is now working

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">Home</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="me-auto"></div>
-                    <ul class="navbar-nav">
+                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <!-- <div class="me-auto"></div> -->
+                    <ul class="navbar-nav ms-auto">
                       <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li> -->
@@ -42,19 +42,25 @@
                         <a class="nav-link" href="about-me.html">About Me</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Experience</a>
+                        <a class="nav-link" href="experience.html">Experience</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link disabled">Education</a>
+                        <a class="nav-link" href="education.html">Education</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="certifications.html">Certifications</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link disabled">Skills</a>
+                        <a class="nav-link" href="skills.html">Skills</a>
                       </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled">Projects</a>
+
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"
+                          aria-expanded="false">Projects</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <li><a class="dropdown-item" href="#">Personal Website/Portfolio</a></li>
+                          <li><a class="dropdown-item" href="#">Cognixia Capstone Project</a></li>
+                        </ul>
                       </li>
                     </ul>
                   </div>
@@ -536,8 +542,9 @@
 
     <!-- Jquery JS file -->
     <script src="./js/jquery.3.6.0.js"></script>
-    <!--Bootstrap JS file -->
-    <script src="./js/bootstrap.min.js"></script>
+    <!-- Bootstrap JS file -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- Isotope JS library -->
     <script src="./vendor/isotope/isotope.min.js"></script>
     <!-- Magnific-Popup script file -->
