--- a/about-me.html
+++ b/about-me.html
@@ -33,8 +33,8 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="me-auto"></div>
-                    <ul class="navbar-nav">
+                    <!-- <div class="me-auto"></div> -->
+                    <ul class="navbar-nav ms-auto">
                       <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li> -->
