fixed some broken links

--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Experience</title>
+    <title>Education</title>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -32,7 +32,7 @@
                   Projects
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Cognixia Capstone Project</a></li>
+                  <li><a class="dropdown-item" href="projects/cognixia-capstone.html">Cognixia Capstone Project</a></li>
                   <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
                   <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                 </ul>
@@ -68,6 +68,8 @@
   <main class="education-main">
     <section class="education-section">
         <div class="container">
+            <h1><strong>Education</strong></h1>
+            <p>August 2017—May 8, 2019: Georgia State University, <strong>Bachelor of Science in Computer Science</strong></p>
 
         </div>
     </section>
