--- a/experience.html
+++ b/experience.html
@@ -36,7 +36,7 @@
                     Projects
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Cognixia Capstone Project</a></li>
+                    <li><a class="dropdown-item" href="projects/cognixia-capstone.html">Cognixia Capstone Project</a></li>
                     <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
                     <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                   </ul>
