--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
                       <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li> -->
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"
+                          aria-expanded="false">Projects</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                          <!-- <li><a class="dropdown-item" href="#">Personal Website/Portfolio</a></li> -->
+                          <li><a class="dropdown-item" href="projects/cognixia-capstone.html">Cognixia Capstone Project</a></li>
+                        </ul>
+                      </li>
                       <li class="nav-item">
                         <a class="nav-link" href="about-me.html">About Me</a>
                       </li>
@@ -54,14 +62,6 @@
                         <a class="nav-link" href="skills.html">Skills</a>
                       </li>
 
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"
-                          aria-expanded="false">Projects</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="#">Personal Website/Portfolio</a></li>
-                          <li><a class="dropdown-item" href="#">Cognixia Capstone Project</a></li>
-                        </ul>
-                      </li>
                     </ul>
                   </div>
                 </div>
@@ -279,7 +279,7 @@
       </section>
       <!-- ############################# End Services Area ############################# -->
       <!-- ##################### Start Project Section ################################# -->
-      <section class="project-area">
+      <!-- <section class="project-area">
         <div class="container">
           <div class="project-title pb-5">
             <h1 class="text-uppercase title-h1">Recently Done Projects</h1>
@@ -412,7 +412,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- ####################### End Project Section ################################# -->
       <!-- ############## Start What Clients Say About Me Section ###################### -->
       <section class="about-area">
@@ -487,7 +487,7 @@
       </section>
       <!-- ############### End What Clients Say About Me Section ####################### -->
       <!-- ############## Start Email Subscription Section ############################  -->
-      <section class="subscribe-us-area">
+      <!-- <section class="subscribe-us-area">
         <div class="container subscribe">
           <div class="row">
             <div class="col-lg-12 text-center subscribe-title">
@@ -510,7 +510,7 @@
             </form>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- ################ End Email Subscription Section ############################# -->
     </main>
     <!-- ############################## End Main Area ############################## -->
