made text in navbar darker

--- a/education.html
+++ b/education.html
@@ -70,6 +70,8 @@
         <div class="container">
             <h1><strong>Education</strong></h1>
             <p>August 2017—May 8, 2019: Georgia State University, <strong>Bachelor of Science in Computer Science</strong></p>
+            <p>August 2014-May 2017: Clayton State University</p>
+            <p>August 2013-May 2014: Valdosta State University</p>
 
         </div>
     </section>
