--- a/projects/cognixia-capstone.html
+++ b/projects/cognixia-capstone.html
@@ -72,8 +72,17 @@
     <main class="cognixia-capstone-main">
         <section class="cognixia-capstone-section">
             <div class="container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/9bSrfBeL8vk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/kGogj2rdoAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h1><strong>Cognixia Capstone Project (2022)</strong></h1>
+                <p>- This was a web application project we did using AWS, Eclipse, Java, HTML, CSS, JS, VSCode, and other tools and technologies.</p>
+                <p>- This was a 5 man project, and we had a week to do it, so here we showcase what we got done.</p>
+                <p>- team members: Steven Ramos, Mohammed Sajjad, Oscar Bonilla, Shem Baijoo, Toju Mikie</p>
+                <p>- <strong>Part 1</strong> is mentioning the main features and functionality of the project, and also shows some of the code. <strong>Part 2</strong> is a much shorter video relating to how we used Atlassian JIRA to keep track of team members' tasks.</p>
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/9bSrfBeL8vk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/kGogj2rdoAY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
                 
             </div>
         </section>
