--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <h4 class="title-text">Hosted on Github Pages</h4>
               <div class="site-buttons">
                 <div class="d-flex flex-row flex-wrap">
-                  <a href="./documents/toritseju mike mikie resume 2023 v1.pdf" class="btn button primary-button mr-4">Click here to download my résumé</a>
+                  <a href="./documents/Profile-1-LinkedIn-Resume.pdf" class="btn button primary-button mr-4">Click here to download my résumé</a>
                   <!-- <button type="button" class="btn button primary-button mr-4">Click here to download my résumé</button> -->
                   <button type="button" class="btn button secondary-button">dummy button</button>
                 </div>
@@ -123,7 +123,9 @@
                   (injected humour and the like).
                 </p> -->
               </div>
-              <button type="button" class="btn button primary-button">Download my résumé</button>
+              <a href="./documents/Profile-1-LinkedIn-Resume.pdf" class="btn button primary-button">Download my résumé</a>
+              <!-- <button type="button" class="btn button primary-button">Download my résumé</button> -->
+              <!-- <button type="button" class="btn button primary-button">Download my résumé</button> -->
             </div>
           </div>
         </div>
