--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             <div class="col-12">
               <div class="about-title">
                 <h1 class="text-uppercase title-h1">What clients say about me</h1>
-                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. In explicabo, cum velit ad facilis impedit repudiandae eius odio inventore quos.</p>
+                <p class="para">I don't have any client reviews right now. Maybe someday, I will. In the meantime, feel free to browse the other sections of the website.</p>
               </div>
             </div>
           </div>
@@ -432,56 +432,58 @@
           <div class="owl-carousel owl-theme">
             <div class="client row">
               <div class="col-lg-4 col-md-12 client-img">
-                <img src="./img/testimonials/t1.jpg" alt="img1" class="img-fluid">
+                <img src="./img/myself.JPG" alt="img1" class="img-fluid">
               </div>
               <div class="col-lg-8 col-md-12 about-client">
-                <h4 class="text-uppercase">John Martin</h4>
-                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+                <h4 class="text-uppercase">Toju Mikie 1</h4>
+                <p class="para">Not Yet! Maybe one day...</p>
               </div>
             </div>
             <div class="client row">
               <div class="col-lg-4 col-md-12 client-img">
-                <img src="./img/testimonials/t2.jpg" alt="img2" class="img-fluid">
+                <img src="./img/myself.JPG" alt="img2" class="img-fluid">
               </div>
               <div class="col-lg-8 col-md-12 about-client">
-                <h4 class="text-uppercase">Mac Hill</h4>
-                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+                <h4 class="text-uppercase">Toju Mikie 2</h4>
+                <p class="para">u need a client bro? HAHA! it's not going to be me...</p>
               </div>
             </div>
             <div class="client row">
               <div class="col-lg-4 col-md-12 client-img">
-                <img src="./img/testimonials/t1.jpg" alt="img1" class="img-fluid">
+                <img src="./img/myself.JPG" alt="img1" class="img-fluid">
               </div>
               <div class="col-lg-8 col-md-12 about-client">
-                <h4 class="text-uppercase">John Martin</h4>
-                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+                <h4 class="text-uppercase">Toju Mikie 3</h4>
+                <p class="para">Ghost town here...</p>
               </div>
             </div>
             <div class="client row">
               <div class="col-lg-4 col-md-12 client-img">
-                <img src="./img/testimonials/t2.jpg" alt="img2" class="img-fluid">
+                <img src="./img/myself.JPG" alt="img2" class="img-fluid">
               </div>
               <div class="col-lg-8 col-md-12 about-client">
-                <h4 class="text-uppercase">Mac Hill</h4>
-                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+                <h4 class="text-uppercase">Toju Mikie 4</h4>
+                <p class="para">Look on the bright side! At least the website is working...</p>
               </div>
             </div>
             <div class="client row">
               <div class="col-lg-4 col-md-12 client-img">
-                <img src="./img/testimonials/t1.jpg" alt="img1" class="img-fluid">
+                <img src="./img/myself.JPG" alt="img1" class="img-fluid">
               </div>
               <div class="col-lg-8 col-md-12 about-client">
-                <h4 class="text-uppercase">John Martin</h4>
-                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+                <h4 class="text-uppercase">Toju Mikie 5</h4>
+                <p class="para">ALL YOUR BASE ARE BELONG TO US</p>
               </div>
             </div>
             <div class="client row">
               <div class="col-lg-4 col-md-12 client-img">
-                <img src="./img/testimonials/t2.jpg" alt="img2" class="img-fluid">
+                <img src="./img/myself.JPG" alt="img2" class="img-fluid">
               </div>
               <div class="col-lg-8 col-md-12 about-client">
-                <h4 class="text-uppercase">Mac Hill</h4>
-                <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor rem omnis accusantium quibusdam maxime similique?</p>
+                <h4 class="text-uppercase">Toju Mikie 6</h4>
+                <p class="para">Hire this guy now! He can write "Hello World"</p>
+                <p class="para">much wow, such doge</p>
+                <!-- <p class="para">such doge</p> -->
               </div>
             </div>
           </div>
