modified the front page again

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <div class="col-lg-12 text-center services-title">
               <h1 class="text-uppercase title-text">Services Offered</h1>
               <p class="para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, labore delectus! Totam neque architecto aliquid impedit voluptate corporis reprehenderit, quis ratione maiores similique! Commodi hic, iure magni perferendis velit possimus!
+                I offer various services using my skills and experience. Feel free to have a look!
               </p>
             </div>
           </div>
@@ -226,12 +226,14 @@
               <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="services">
                   <div class="services-img text-center py-4">
-                    <img src="./img/services/s1.png" alt="Services-1">
+                    <!-- <img src="./img/services/s1.png" alt="Services-1"> -->
+                    <i class="fa-solid fa-network-wired fa-3x"></i>
+                    <!-- <i class="fa-duotone fa-network-wired"></i> -->
                   </div>
                   <div class="card-body text-center">
-                    <h5 class="card-title text-uppercase font-overpass">WP developer</h5>
+                    <h5 class="card-title text-uppercase font-overpass">IT Support</h5>
                     <p class="card-text text-secondary">
-                      Lorem, ipsum.
+                      Offer Tech Support
                     </p>
                   </div>
                 </div>
@@ -239,12 +241,13 @@
               <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="services">
                   <div class="services-img text-center py-4">
-                    <img src="./img/services/s2.png" alt="Services-2">
+                    <!-- <img src="./img/services/s2.png" alt="Services-2"> -->
+                    <i class="fa-solid fa-code fa-3x"></i>
                   </div>
                   <div class="card-body text-center">
-                    <h5 class="card-title text-uppercase font-overpass">ux/ui design</h5>
+                    <h5 class="card-title text-uppercase font-overpass">Software Dev</h5>
                     <p class="card-text text-secondary">
-                      Lorem, ipsum.
+                      Develop Java-based apps
                     </p>
                   </div>
                 </div>
@@ -252,12 +255,13 @@
               <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="services">
                   <div class="services-img text-center py-4">
-                    <img src="./img/services/s3.png" alt="Services-3">
+                    <!-- <img src="./img/services/s3.png" alt="Services-3"> -->
+                    <i class="fa-solid fa-wifi fa-3x"></i>
                   </div>
                   <div class="card-body text-center">
                     <h5 class="card-title text-uppercase font-overpass">web design</h5>
                     <p class="card-text text-secondary">
-                      Lorem, ipsum.
+                      HTML, CSS, Bootstrap, JS
                     </p>
                   </div>
                 </div>
@@ -265,12 +269,13 @@
               <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="services">
                   <div class="services-img text-center py-4">
-                    <img src="./img/services/s4.png" alt="Services-4">
+                    <!-- <img src="./img/services/s4.png" alt="Services-4"> -->
+                    <i class="fa-solid fa-laptop-medical fa-3x"></i>
                   </div>
                   <div class="card-body text-center">
-                    <h5 class="card-title text-uppercase font-overpass">seo optimize</h5>
+                    <h5 class="card-title text-uppercase font-overpass">Electronics Repair</h5>
                     <p class="card-text text-secondary">
-                      Lorem, ipsum.
+                      Repair electronics for users
                     </p>
                   </div>
                 </div>
