company logos, skills
-added company logos to front page
-edited skills page

--- a/index.html
+++ b/index.html
@@ -139,49 +139,57 @@
               <div class="first-row row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/logo1.png" alt="Brand-1">
+                    <!-- <img src="./img/brands/logo1.png" alt="Brand-1"> -->
+                    <img src="./img/brands/Amazon_(company)-Logo.wine.png" alt="Brand-1">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/logo2.png" alt="Brand-2">
+                    <!-- <img src="./img/brands/logo2.png" alt="Brand-2"> -->
+                    <img src="./img/brands/Cognixia_Logo.jpg" alt="Brand-2">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/logo3.png" alt="Brand-3">
+                    <!-- <img src="./img/brands/logo3.png" alt="Brand-3"> -->
+                    <img src="./img/brands/Pyramid_Consulting_Logo.jfif" alt="Brand-3">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/logo4.png" alt="Brand-4">
+                    <!-- <img src="./img/brands/logo4.png" alt="Brand-4"> -->
+                    <img src="./img/brands/FedEx Logo.png" alt="Brand-4">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/logo5.png" alt="Brand-5">
+                    <!-- <img src="./img/brands/logo5.png" alt="Brand-5"> -->
+                    <img src="./img/brands/mikie's big burger logo.webp" alt="Brand-5">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/logo6.png" alt="Brand-6">
+                    <!-- <img src="./img/brands/logo6.png" alt="Brand-6"> -->
+                    <img src="./img/brands/revature.png" alt="Brand-6">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/logo7.png" alt="Brand-7">
+                    <!-- <img src="./img/brands/logo7.png" alt="Brand-7"> -->
+                    <img src="./img/brands/ram-tech.jfif" alt="Brand-7">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/logo8.png" alt="Brand-8">
+                    <!-- <img src="./img/brands/logo8.png" alt="Brand-8"> -->
+                    <img src="./img/brands/walmart.png" alt="Brand-8">
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
                     <img src="./img/brands/logo9.png" alt="Brand-9">
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-xl-6 col-lg-12 col-md-12">
@@ -195,10 +203,10 @@
                   </h2>
                 </div>
                 <div class="d-flex flex-row flex-wrap call-area">
-                  <span><i class="fa-solid fa-phone fa-3x px-3"></i></span>
+                  <!-- <span><i class="fa-solid fa-phone fa-3x px-3"></i></span> -->
                   <div class="call-now">
-                    <a href="#" class="text-uppercase h4 font-overpass">Call Now</a>
-                    <span class="font-overpass py-2">(+1)000-000-0000</span>
+                    <!-- <a href="#" class="text-uppercase h4 font-overpass">Call Now</a> -->
+                    <!-- <span class="font-overpass py-2">(+1)000-000-0000</span> -->
                   </div>
                 </div>
                 <div class="bg-panel">
@@ -256,10 +264,11 @@
                 <div class="services">
                   <div class="services-img text-center py-4">
                     <!-- <img src="./img/services/s3.png" alt="Services-3"> -->
-                    <i class="fa-solid fa-wifi fa-3x"></i>
+                    <!-- <i class="fa-solid fa-wifi fa-3x"></i> -->
+                    <img src="./icons/responsive-design (1).png" class="img-fluid" alt="Services-3">
                   </div>
                   <div class="card-body text-center">
-                    <h5 class="card-title text-uppercase font-overpass">web design</h5>
+                    <h5 class="card-title text-uppercase font-overpass">web design & dev</h5>
                     <p class="card-text text-secondary">
                       HTML, CSS, Bootstrap, JS
                     </p>
@@ -544,6 +553,7 @@
               Website 2022, created by Toju Mikie.
               <!-- <a href="#"><span style="color: var(--primary-color);">Daily Tuition</span></a> -->
             </p>
+            <p class="para"> <a href="https://www.flaticon.com/free-icons/responsive" title="responsive icons">Responsive icons created by Flat Icons - Flaticon</a></p>
           </div>
         </div>
       </div>
