--- a/skills.html
+++ b/skills.html
@@ -70,10 +70,38 @@
         <section class="skills-section">
             <div class="container">
                 <h1><strong>Skills</strong></h1>
-            </div>
+                <p>Electronics Repair, Computer Repair, Research, Sales, Soldering, Data Mining, Video Editing, Customer Service, Programming</p>
+                <h2><strong>Technologies</strong></h2>
+                <p>Java, Python 3, PHP, SQL, JUnit, Maven, JDBC, HTML, CSS, COBOL, PL/SQL</p>
+                <h2><strong>Tools & Software</strong></h2>
+                <p>Microsoft Office, Windows OS, Windows Server, Linux, MATLAB, Eclipse, Netbeans, IntelliJ, Amazon Web Services (AWS), Oracle SQL Developer</p>
+              </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer-area">
+      <div class="container">
+        <div class="">
+          <div class="site-logo text-center py-4">
+            <!-- <a href="#"><img src="./img/logo.png" alt="logo"></a> -->
+          </div>
+          <div class="social text-center">
+            <h5 class="text-uppercase">Follow me</h5>
+            <!-- <a href="#"><i class="fab fa-facebook"></i></a> -->
+            <!-- <a href="#"><i class="fab fa-instagram"></i></a> -->
+            <!-- <a href="#"><i class="fab fa-youtube"></i></a> -->
+            <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
+            <a href="https://github.com/tojumikie"><i class="fab fa-github"></i></a>
+            <a href="https://stackoverflow.com/users/19149158/tojumikie"><i class="fab fa-stack-overflow"></i></a>
+            <a href="https://www.linkedin.com/in/toju-mikie-87ba96101/"><i class="fab fa-linkedin"></i></a>
+          </div>
+          <div class="copyrights text-center">
+            <p class="para">
+              Website 2022, created by Toju Mikie.
+              <!-- <a href="#"><span style="color: var(--primary-color);">Daily Tuition</span></a> -->
+            </p>
+          </div>
+        </div>
+      </div>
     </footer>
     <!-- Bootstrap JS file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
