--- a/skills.html
+++ b/skills.html
@@ -7,11 +7,19 @@
     <title>Skills</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- custom CSS -->
     <link rel="stylesheet" href="./css/styles2.css">
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="./css/all.min.css">
+    <!-- Magnific Popup css file -->
+    <link rel="stylesheet" href="./vendor/Magnific-Popup/dist/magnific-popup.css">
+    <!-- OwlCarousel css file -->
+    <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.theme.default.min.css">
+    <!-- Responsive CSS file -->
+    <link rel="stylesheet" href="./css/responsive2.css">
 
   </head>
   <body>
@@ -71,6 +79,7 @@
             <div class="container">
                 <h1><strong>Skills</strong></h1>
                 <p>Electronics Repair, Computer Repair, Research, Sales, Soldering, Data Mining, Video Editing, Customer Service, Programming</p>
+                <br>
                 <h2><strong>Technologies</strong></h2>
                 <p>Java, Python 3, PHP, SQL, JUnit, Maven, JDBC, HTML, CSS, COBOL, PL/SQL</p>
                 <h2><strong>Tools & Software</strong></h2>
