edited the about-me.html
-fixed navbar

--- a/index.html
+++ b/index.html
@@ -496,7 +496,9 @@
               <div class="col-lg-8 col-md-12 about-client">
                 <h4 class="text-uppercase">Toju Mikie 6</h4>
                 <p class="para">Hire this guy now! He can write "Hello World"</p>
-                <p class="para">much wow, such doge</p>
+                <p class="para">i can has cheezburger?</p>
+                <!-- <p class="para">much wow...</p> -->
+                
                 <!-- <p class="para">such doge</p> -->
               </div>
             </div>
