added a dummy page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 <div class="d-flex flex-row flex-wrap">
                   <a href="./documents/Profile-1-LinkedIn-Resume.pdf" class="btn button primary-button mr-4">Click here to download my résumé</a>
                   <!-- <button type="button" class="btn button primary-button mr-4">Click here to download my résumé</button> -->
-                  <button type="button" class="btn button secondary-button">dummy button</button>
+                  <!-- <button type="button" class="btn button secondary-button">dummy button</button> -->
+                  <a href="./dummy.html" class="btn button secondary-button">dummy button</a>
                 </div>
               </div>
             </div>
