--- a/projects/cognixia-capstone.html
+++ b/projects/cognixia-capstone.html
@@ -7,14 +7,19 @@
     <title>Cognixia Capstone Project</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- custom CSS -->
     <link rel="stylesheet" href="../css/styles2.css">
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="../css/all.min.css">
-
-
-
+    <!-- Magnific Popup css file -->
+    <link rel="stylesheet" href="../vendor/Magnific-Popup/dist/magnific-popup.css">
+    <!-- OwlCarousel css file -->
+    <link rel="stylesheet" href="../vendor/owl-carousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../vendor/owl-carousel/css/owl.theme.default.min.css">
+    <!-- Responsive CSS file -->
+    <link rel="stylesheet" href="../css/responsive2.css">
 
   </head>
   <body>
@@ -23,7 +28,7 @@
     
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Home</a>
+            <a class="navbar-brand" href="../index.html">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
               aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -112,9 +117,19 @@
           </div>
         </div>
       </footer>
-      <!-- Bootstrap JS file -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+              <!-- Jquery JS file -->
+              <script src="../js/jquery.3.6.0.js"></script>
+              <!-- Bootstrap JS file -->
+              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+              <!-- Isotope JS library -->
+              <script src="../vendor/isotope/isotope.min.js"></script>
+              <!-- Magnific-Popup script file -->
+              <script src="../vendor/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
+              <!-- OwlCarousel JS file -->
+              <script src="../vendor/owl-carousel/js/owl.carousel.min.js"></script>
+              <!-- custom JS file -->
+              <script src="../js/main2.js"></script>
         
       </body>
       </html>
