--- a/about-me.html
+++ b/about-me.html
@@ -103,7 +103,8 @@
                   (injected humour and the like).
                 </p> -->
               </div>
-              <button type="button" class="btn button primary-button">Download my résumé</button>
+              <!-- <button type="button" class="btn button primary-button">Download my résumé</button> -->
+              <a href="./documents/Profile-1-LinkedIn-Resume.pdf" class="btn button primary-button">Download my résumé</a>
             </div>
           </div>
         </div>
