--- a/certifications.html
+++ b/certifications.html
@@ -5,86 +5,99 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toju Mikie's Website</title>
+    <title>Certifications</title>
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- custom CSS -->
+    <link rel="stylesheet" href="./css/styles2.css">
+    <!-- Font Awesome icons -->
+    <link rel="stylesheet" href="./css/all.min.css">
     <!-- Magnific Popup css file -->
     <link rel="stylesheet" href="./vendor/Magnific-Popup/dist/magnific-popup.css">
-    <!-- Bootstrap CSS file-->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <!-- fontawesome icons -->
-    <link rel="stylesheet" href="./css/all.min.css">
     <!-- OwlCarousel css file -->
     <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.carousel.min.css">
     <link rel="stylesheet" href="./vendor/owl-carousel/css/owl.theme.default.min.css">
-    <!-- custom CSS file -->
-    <link rel="stylesheet" href="./css/style.css">
     <!-- Responsive CSS file -->
-    <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./css/responsive2.css">
 </head>
 
 <body>
 
     <!-- ############################## Start Header Area ############################## -->
-    <header class="header_area">
+    <header class="header-area">
         <div class="main-menu">
-            <nav class="navbar navbar-expand-lg bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">Home</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <div class="me-auto"></div>
-                        <ul class="navbar-nav">
-                            <!-- <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li> -->
-                            <li class="nav-item">
-                                <a class="nav-link" href="about-me.html">About Me</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Experience</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled">Education</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="certifications.html">Certifications</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled">Skills</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link disabled">Projects</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
+      
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">Home</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Projects
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="projects/cognixia-capstone.html">Cognixia Capstone Project</a></li>
+                      <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
+                      <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="about-me.html">About Me</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="experience.html">Experience</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="education.html">Education</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="certifications.html">Certifications</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="skills.html">Skills</a>
+                  </li>
+      
+                  <!-- <li class="nav-item">
+                      <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Pricing</a>
+                    </li> -->
+                </ul>
+              </div>
+            </div>
+          </nav>
         </div>
-    </header>
+      </header>
     <!-- ##############################  End Header Area  ############################## -->
     <main class="site-certifications">
         <section class="certs-section">
             <div class="container">
-                <h1>Certifications</h1>
+                <h1><strong>Certifications</strong></h1>
                 <br>
-                <h5>AWS Certified Cloud Practitioner</h5>
+                <h5><strong>AWS Certified Cloud Practitioner</strong></h5>
                 <p>Issued by Amazon</p>
                 <ul>
                     <li>Issued August 22, 2022, Expires August 22, 2025</li>
                     <li><a href="https://www.credly.com/badges/4617c92d-611e-43bf-b66d-2958c1f00aaf/public_url">Link to Certification</a></li>
                 </ul>
                 <br>
-                <h5>CompTIA A+</h5>
+                <h5><strong>CompTIA A+</strong></h5>
                 <p>Issued by CompTIA</p>
                 <ul>
                     <li>Issued February 4, 2021, Expires February 4, 2024</li>
                     <li><a href="https://www.credly.com/badges/74e574f6-e847-478f-8623-dd1c8d24ef57/public_url">Link to Certification</a></li>
                 </ul>
                 <br>
-                <h5>Oracle Cloud Infrastructure Foundations 2021 Associate</h5>
+                <h5><strong>Oracle Cloud Infrastructure Foundations 2021 Associate</strong></h5>
                 <p>Issued by Oracle</p>
                 <ul>
                     <li>Issued March 7, 2022, Expires September 7, 2023</li>
@@ -119,17 +132,18 @@
         </div>
       </footer>
 
-    <!-- Jquery JS file -->
-    <script src="./js/jquery.3.6.0.js"></script>
-    <!--Bootstrap JS file -->
-    <script src="./js/bootstrap.min.js"></script>
-    <!-- Isotope JS library -->
-    <script src="./vendor/isotope/isotope.min.js"></script>
-    <!-- Magnific-Popup script file -->
-    <script src="./vendor/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
-    <!-- OwlCarousel JS file -->
-    <script src="./vendor/owl-carousel/js/owl.carousel.min.js"></script>
-    <!-- custom JS file -->
-    <script src="./js/main.js"></script>
+        <!-- Jquery JS file -->
+        <script src="./js/jquery.3.6.0.js"></script>
+        <!-- Bootstrap JS file -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <!-- Isotope JS library -->
+        <script src="./vendor/isotope/isotope.min.js"></script>
+        <!-- Magnific-Popup script file -->
+        <script src="./vendor/Magnific-Popup/dist/jquery.magnific-popup.min.js"></script>
+        <!-- OwlCarousel JS file -->
+        <script src="./vendor/owl-carousel/js/owl.carousel.min.js"></script>
+        <!-- custom JS file -->
+        <script src="./js/main2.js"></script>
 </body>
 </html>
