changed main picture on website
changed main picture on website

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               </div>
             </div>
             <div class="col-lg-6 col-md-12 banner-image">
-              <img src="./img/myself.JPG" alt="self-portrait" class="img-fluid">
+              <img src="./img/myself.png" alt="self-portrait" class="img-fluid">
             </div>
           </div>
         </div>
